# mozilla-vpn-client

./: .clang-format  .clang-format-ignore  .clang-tidy  .cron.yml  .dictionary  .env.example  .gitignore  .gitmodules  .qmllint.ini  .taskcluster.yml  AppShortcuts.xcstrings  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  ConnectionHealth.swift  Doxyfile  ExtensionTunnel.swift  INSTALLING.md  LICENSE.md  Localizable.xcstrings  MozillaVPN.xcscheme  MozillaVPN_iphoneos16.0.xctestrun  README.md  README_LICENSE.md  SECURITY.md  ToggleWidgetExtension.entitlements  a.py  android_sdk.txt  cargo  domain_name-0.5.99999999.gem  engine.h  env-android.yml  env-apple.yml  env-wasm.yml  env-windows.yml  env.bat.template  env.win.yml  env.yml  externalrcc.pri  (+32 more)
addons/: CMakeLists.txt  guide_01_how_to_vpn.rcc  guide_01_how_to_vpn.ts  guide_02_is_my_vpn_working_correctly.rcc  guide_02_is_my_vpn_working_correctly.ts  guide_03_adding_and_removing_devices.rcc  guide_03_adding_and_removing_devices.ts  guide_04_connecting_external_devices.rcc  guide_04_connecting_external_devices.ts  manifest.json  manifest.json.sign  message_survey_28d_desktop.rcc  message_survey_28d_desktop.ts  message_survey_28d_mobile.rcc  message_survey_staging_10s.rcc  message_survey_staging_10s.ts  message_survey_staging_4s.rcc  message_survey_staging_4s.ts  message_survey_staging_locale.rcc  message_survey_staging_locale.ts  strings.yaml  tutorial_01_get_started.rcc  tutorial_01_get_started.ts  tutorial_02_connect_on_startup.rcc  tutorial_02_connect_on_startup.ts  validate.cpp
addons/group_demo/: button.js  enable.js  manifest.json
addons/guide_01_how_to_vpn/: manifest.json
addons/guide_02_is_my_vpn_working_correctly/: manifest.json
addons/guide_03_adding_and_removing_devices/: manifest.json
addons/guide_04_connecting_external_devices/: manifest.json
addons/guide_05_what_is_multi_hop/: manifest.json
addons/guide_06_benefits_of_custom_dns/: manifest.json
addons/guide_07_app_permissions/: manifest.json
addons/guide_08_privacy_features/: manifest.json
addons/guide_08_recommended_servers/: manifest.json
addons/guide_09_custom_dns/: manifest.json
addons/guide_10_app_exclusions/: manifest.json
addons/guide_11_multi_account_containers/: manifest.json
addons/guide_11_recommended_servers/: manifest.json
addons/guide_12_multi_account_containers/: manifest.json  openAmo.js
addons/language/: README.md  language.qrc  manifest.json
addons/message_1/: manifest.json
addons/message_2/: manifest.json
addons/message_3/: manifest.json
addons/message_4/: manifest.json
addons/message_dom/: button.js  hypnodrones.js  manifest.json
addons/message_expiring_subscription/: manifest.json
addons/message_fpn_trial_subscription_expiring/: isFpnTrial.js  manifest.json
addons/message_js/: main.js  manifest.json
addons/message_paid_research/: OpenSurveyURL.js  manifest.json
addons/message_paid_research_old/: currencyCheck.js  manifest.json
addons/message_plan_upgrade/: conditions.js  getHelp.js  manifest.json
addons/message_plan_upgrade_14d/: conditions.js  manifest.json
addons/message_plan_upgrade_87d copy/: conditions.js  manifest.json
addons/message_privacy_bundle_staging/: EnableBundleUpgrade.js  OpenBundleUpgradeFlow.js  OpenGetHelpScreen.js  manifest.json
addons/message_staging_locale_all/: manifest.json
addons/message_staging_locale_en/: manifest.json
addons/message_staging_locale_enit/: manifest.json
addons/message_staging_locale_it/: manifest.json
addons/message_staging_test_length/: addLine.js  manifest.json  removeLine.js
addons/message_staging_update_v2.14/: manifest.json
addons/message_subscription_expiring/: contactSupportLink.js  isExpiring.js  manageAccountLink.js  manifest.json
addons/message_survey/: manifest.json  setDate.js
addons/message_survey_28d_desktop/: manifest.json
addons/message_survey_28d_mobile/: manifest.json
addons/message_survey_staging_10s/: manifest.json
addons/message_survey_staging_1h/: OpenSurveyURL.js  manifest.json  setDate.js
addons/message_survey_staging_30m/: OpenSurveyURL.js  manifest.json  setDate.js
addons/message_survey_staging_4s/: manifest.json
addons/message_survey_staging_locale/: manifest.json
addons/message_try_firefox_extension/: downloadFirefox.js  manifest.json  (+1 more)
extension/: CMakeLists.txt
glean/: CMakeLists.txt  glean.cpp  glean.h  glean.js  glean.pri  glean.pro  glean.qrc  glean.vcxproj  load.js  metrics.yaml  pings.yaml
lottie/: .gitignore  CMakeLists.txt  README.md  lottie.pri  lottie.pro
nebula/: .gitignore  CMakeLists.txt  Makefile.Debug  Makefile.Release  nebula.cpp  nebula.h  nebula.pri  nebula.pro  nebula.vcxproj  nebula.vcxproj.filters
obfuscators/: Cargo.toml  build.rs  cbindgen.toml
qtglean/: CMakeLists.txt  Cargo.toml  Info.plist.in  android.cmake  build.rs  ios.cmake  metrics.yaml  pings.yaml  qtglean.pri  vpnglean.pri
signature/: Cargo.toml
socks5proxy/: CMakeLists.txt  proxy.pro
src/: CMakeLists.txt  Doxyfile  Makefile.Debug  Makefile.Release  StateConnecting.qml  StateInitialize.qml  StateMain.qml  StateOff.qml  ViewMain.qml  accessiblenotification.cpp  accessiblenotification.h  addon.cpp  addon.h  addondirectory.cpp  addondirectory.h  addonindex.cpp  addonindex.h  addonmanager.cpp  addonmanager.h  adjusthandler.cpp  adjusthandler.h  adjustproxy.cpp  adjustproxy.h  adjustproxyconnection.cpp  adjustproxyconnection.h  app.cpp  app.h  appconstants.h  appfeaturelistcallback.h  appimageprovider.h  applistprovider.h  apppermission.cpp  apppermission.h  appsettingslist.h  authenticationlistener.cpp  authenticationlistener.h  backendfailurewatcher.cpp  backendfailurewatcher.h  bigint.h  captiveportal.h  (+270 more)
translations/: CMakeLists.txt  i18nstrings.cpp  l18nstrings.cpp  languages.json  languages.qrc  locversion.plist.in  mozillavpn_en.ts  mozillavpn_it.ts  mozillavpn_zh.ts  servers-template.json  servers.json  strings.yaml  translations.pri  translations.pro
vpnglean/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  ios.cmake  metrics.yaml  pings.yaml  uniffi.toml.in  vpnglean.pri
(+7707 files in other folders)
